# RTIOW_rust

./: .gitignore  Cargo.toml  README.md  dump2.ppm  dump3.ppm  dumpsl.ppm  dumpsl2.ppm  image.ppm  notes.txt  tmp.txt
images/: image_10.ppm  image_11.ppm  image_12.ppm  image_14.ppm  image_15.ppm  image_16.ppm  image_17.ppm  image_18.ppm  image_19.ppm  image_20.ppm  image_7.ppm  image_8.ppm  image_9.ppm
src/: camera.rs  color.rs  hit.rs  hittable.rs  hittable_list.rs  main.rs  material.rs  notes.txt  ray.rs  render.rs  scene.rs  sphere.rs  temp.rs  tmp.rs  utils.rs  vec3.rs
