[package]
name = "raytracer_weekend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = "fat"
codegen-units = 1

# debug = true

# [rust]
# debuginfo-level = 1

[dependencies]
rand = {version = "0.8.4", features = ["std_rng"]}
rayon = "1.5.1"
# tailcall = "0.1.5"

